compiler/testData/diagnostics/tests/multiplatform/nestedClassViaActualTypealiasIncompatibilities.fir.kt
// MODULE: m1-common()()()
// FILE: common.kt
<!EXPECT_ACTUAL_INCOMPATIBILITY{JVM}!>expect class Foo {
    class Inner
    <!NO_ACTUAL_FOR_EXPECT{JVM}!>class AbsentOnactual<!>
}<!>

// MODULE: m2-jvm()()(m1-common)
// FILE: jvm.kt
class FooImpl {
    class Inner
}

actual typealias <!NO_ACTUAL_CLASS_MEMBER_FOR_EXPECTED_CLASS!>Foo<!> = FooImpl
